# Instant_Messaging_Project

./: CMakeLists.txt  CSession.cpp  ChatGrpcClient.cpp  ChatGrpcClient.h  README.md  RedisMgr.cpp  StatusGrpcClient.h  build.sh  data.h  message.pb.cc  server.sh
ChatServer/: AsioIOContextPool.cpp  AsioIOContextPool.h  CServer.h  CSession.h  ChatServer.cpp  ChatServer.vcxproj  ChatServer.vcxproj.filters  ChatServiceImpl.cpp  ConfigMgr.h  LogicSystem.cpp  LogicSystem.h  MysqlDao.cpp  MysqlDao.h  MysqlMgr.h  PropertySheet.props  RedisMgr.h  (+4 more)
ChatServer2/: AsioIOContextPool.cpp  AsioIOContextPool.h  CMakeLists.txt  CServer.cpp  CServer.h  CSession.cpp  CSession.h  ChatGrpcClient.h  ChatServer.cpp  ChatServer.sln  ChatServer.vcxproj  ChatServer.vcxproj.filters  ChatServiceImpl.cpp  ChatServiceImpl.h  ConfigMgr.cpp  ConfigMgr.h  LogicSystem.cpp  LogicSystem.h  MsgNode.cpp  MsgNode.h  MysqlDao.cpp  MysqlDao.h  MysqlMgr.cpp  MysqlMgr.h  README.md  RedisMgr.cpp  StatusGrpcClient.cpp  UserMgr.cpp  UserMgr.h  config.ini  const.h  message.proto
GateServer/: AsioIOContextPool.cpp  AsioIOContextPool.h  CMakeLists.txt  CServer.cpp  CServer.h  ConfigMgr.cpp  ConfigMgr.h  GateServer.cpp  GateServer.sln  GateServer.vcxproj  GateServer.vcxproj.filters  HttpConnection.cpp  HttpConnection.h  LogicSystem.cpp  LogicSystem.h  MysqlDao.cpp  MysqlDao.h  MysqlMgr.cpp  MysqlMgr.h  README.md  RedisMgr.cpp  RedisMgr.h  Singleton.h  StatusGrpcClient.cpp  StatusGrpcClient.h  VarifyGrpcClient.cpp  VarifyGrpcClient.h  build.sh  config.ini  const.h  message.pb.cc  message.pb.h  message.proto  reg_user.sql
(+164 files in other folders)
